[package]
name = "qubit-sanitize"
version = "0.2.1"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-sanitize"
description = "Reusable field and structured object sanitization utilities for Rust"
homepage = "https://github.com/qubit-ltd/rs-sanitize"
documentation = "https://docs.rs/qubit-sanitize"
readme = "README.md"
keywords = ["sanitize", "mask", "redact", "logging", "qubit"]
categories = ["development-tools", "value-formatting"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/README.zh_CN.md",
    "/RUST_CODING_STYLE.md",
    "/RUST_CODING_STYLE.zh_CN.md",
    "/doc/**/user_guide*.md",
    "/examples/**",
    "/resources/**",
    "/src/**",
    "/tests/**",
]

[lib]
name = "qubit_sanitize"
doctest = true

[dependencies]
http = "1.4"
serde_json = "1.0"
url = "2.5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
